--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "eslint": "8.49.0",
@@ -23,14 +28,17 @@
     "next": "13.4.19",
     "postcss": "8.4.29",
     "query-string": "^8.1.0",
+    "radix-ui": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-spinners": "^0.13.8",
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "zod": "^3.22.4",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
