--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@headlessui/react": "^1.7.15",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
@@ -24,6 +26,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.241.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
