--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-NEXT_PUBLIC_API_URL=https://sokofiti-admin.vercel.app/api/f0d92dba-5e62-4595-bf0e-85f8a6fa6d64
-# NEXT_PUBLIC_API_URL=http://localhost:3001/api/f0d92dba-5e62-4595-bf0e-85f8a6fa6d64
-NEXT_PUBLIC_API_ALL_URL=https://sokofiti-admin.vercel.app/api
+#NEXT_PUBLIC_API=https://sokofiti-admin.vercel.app/api/f0d92dba-5e62-4595-bf0e-85f8a6fa6d64
+NEXT_PUBLIC_API_URL=http://localhost:3001/api/f0d92dba-5e62-4595-bf0e-85f8a6fa6d64
+# NEXT_PUBLIC_URL=https://sokofiti-admin.vercel.app/api
+NEXT_PUBLIC_API_ALL_URL=http://localhost:3001/api
