--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.241.0",
     "next": "13.4.19",
+    "next-themes": "^0.3.0",
     "postcss": "8.4.29",
     "query-string": "^8.1.0",
     "radix-ui": "^1.0.1",
@@ -41,6 +42,7 @@
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.8.2",
     "react-spinners": "^0.13.8",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
