--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-#NEXT_PUBLIC_API=https://sokofiti-admin.vercel.app/api/f0d92dba-5e62-4595-bf0e-85f8a6fa6d64
-NEXT_PUBLIC_API_URL=http://localhost:3001/api/7336daba-0ac6-41ea-a67c-783ca9081f2c
-# NEXT_PUBLIC_URL=https://sokofiti-admin.vercel.app/api
-NEXT_PUBLIC_API_ALL_URL=http://localhost:3001/api
+NEXT_PUBLIC_API_URL=https://sokofiti-admin.vercel.app/api/53331988-8c0f-4374-bb5d-75e197bd5505
+# NEXT_PUBLICAPI_URL=http://localhost:3001/api/7336daba-0ac6-41ea-a67c-783ca9081f2c
+NEXT_PUBLIC_API_ALL_URL=https://sokofiti-admin.vercel.app/api
