--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
