--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
+    "embla-carousel-autoplay": "^8.1.3",
+    "embla-carousel-react": "^8.1.3",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^11.1.7",
